# ane-infer

./: .gitignore  Cargo.toml  HANDOVER.md  README.md
crates/ane-bridge/: Cargo.toml  build.rs
crates/ane-bridge/objc/: ane_runtime.h  ane_runtime.m  chaining_e2e.m  coreml_probe.m  iokit_probe.m  iokit_probe2.m  test_fused_ffn.m
crates/ane-bridge/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/metal/: attention.metal  deltanet.metal  q4_gemv.metal  q8_gemv.metal  q8_gemv.metallib
crates/engine/src/: ane_prefill.rs  decode.rs  deltanet.rs  deltanet_cache.rs  gpu_decode.rs  gpu_full_decode.rs  kv_cache.rs  lib.rs  metal_gemv.rs  metal_graph.rs  model.rs  prefill.rs  q8_gemv.rs  scheduler.rs  scratch.rs  tokenizer.rs
crates/gguf/: Cargo.toml
crates/gguf/src/: dequant.rs  lib.rs  parser.rs  to_ane.rs
crates/mil-gen/: Cargo.toml
crates/mil-gen/src/: attention.rs  ffn.rs  lib.rs  mega.rs  normalization.rs
docs/: ane-internals.md
